--- a/comparativo.html
+++ b/comparativo.html
@@ -18,7 +18,7 @@
         <tbody>
             <tr>
                 <td style="width: 15%;">
-                    <a href="/inicio.html"><img src="/El_Encanto_Logo.png" style="width: 150px;"></a>
+                    <a href="inicio.html"><img src="./El_Encanto_Logo.png" style="width: 150px;"></a>
                 </td>
                 <td style="width: auto;">
                     <h3>
